src/parser/gen/bloqParser.java
// Generated from /Users/jessicazhan/Projects/cpsc410_project1_team9/src/parser/bloqParser.g4 by ANTLR 4.10.1

package parser.gen;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class bloqParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CANVAS=1, BLOCK=2, START=3, FOR=4, SHAPE=5, IF=6, TO=7, DEFINE=8, CALL=9, 
		ELSE=10, EQUAL=11, GREATER=12, GREATEREQ=13, LESS=14, LESSRQ=15, NOTEQ=16, 
		AND=17, OR=18, NOT=19, PLUS=20, MINUS=21, MULTIPLY=22, DIVIDE=23, MODULO=24, 
		NUMBER=25, TEXT=26, COLON=27, SEMICOLON=28, COMMA=29, OPENCURLY=30, CLOSECURLY=31, 
		OPENBRACKET=32, CLOSEBRACKET=33, NEWLINE=34, WS=35;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_canvas_statement = 2, RULE_simple_assignment_statement = 3, 
		RULE_shape_assignment_statement = 4, RULE_call_statement = 5, RULE_define_statement = 6, 
		RULE_in_function_statement = 7, RULE_block_statement = 8, RULE_block_start_statement = 9, 
		RULE_block_shape_statement = 10, RULE_loop_statement = 11, RULE_in_loop_statement = 12, 
		RULE_if_statement = 13, RULE_else_statement = 14, RULE_in_if_statement = 15, 
		RULE_linked_condition = 16, RULE_condition = 17, RULE_expression = 18, 
		RULE_args = 19, RULE_shape_row = 20, RULE_variable = 21, RULE_value = 22, 
		RULE_comparator = 23, RULE_operator = 24, RULE_logic_operator = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "canvas_statement", "simple_assignment_statement", 
			"shape_assignment_statement", "call_statement", "define_statement", "in_function_statement", 
			"block_statement", "block_start_statement", "block_shape_statement", 
			"loop_statement", "in_loop_statement", "if_statement", "else_statement", 
			"in_if_statement", "linked_condition", "condition", "expression", "args", 
			"shape_row", "variable", "value", "comparator", "operator", "logic_operator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'canvas'", "'block'", "'start'", "'for'", "'shape'", "'if'", "'to'", 
			"'define'", "'call'", "'else'", "'=='", "'>'", "'>='", "'<'", "'<='", 
			"'!='", "'&&'", "'||'", "'!'", "'+'", "'-'", "'*'", "'/'", "'%'", null, 
			null, "':'", "';'", "','", "'{'", "'}'", "'('", "')'", "'\\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CANVAS", "BLOCK", "START", "FOR", "SHAPE", "IF", "TO", "DEFINE", 
			"CALL", "ELSE", "EQUAL", "GREATER", "GREATEREQ", "LESS", "LESSRQ", "NOTEQ", 
			"AND", "OR", "NOT", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", 
			"NUMBER", "TEXT", "COLON", "SEMICOLON", "COMMA", "OPENCURLY", "CLOSECURLY", 
			"OPENBRACKET", "CLOSEBRACKET", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "bloqParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public bloqParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bloqParserVisitor ) return ((bloqParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(52);
				statement();
				}
				}
				setState(55); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CANVAS) | (1L << BLOCK) | (1L << FOR) | (1L << IF) | (1L << DEFINE) | (1L << CALL) | (1L << TEXT))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Canvas_statementContext canvas_statement() {
			return getRuleContext(Canvas_statementContext.class,0);
		}
		public Simple_assignment_statementContext simple_assignment_statement() {
			return getRuleContext(Simple_assignment_statementContext.class,0);
		}
		public Shape_assignment_statementContext shape_assignment_statement() {
			return getRuleContext(Shape_assignment_statementContext.class,0);
		}
		public Define_statementContext define_statement() {
			return getRuleContext(Define_statementContext.class,0);
		}
		public Call_statementContext call_statement() {
			return getRuleContext(Call_statementContext.class,0);
		}
		public Block_statementContext block_statement() {
			return getRuleContext(Block_statementContext.class,0);
		}
		public Loop_statementContext loop_statement() {
			return getRuleContext(Loop_statementContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(bloqParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(bloqParser.NEWLINE, i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bloqParserVisitor ) return ((bloqParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(65);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(57);
				canvas_statement();
				}
				break;
			case 2:
				{
				setState(58);
				simple_assignment_statement();
				}
				break;
			case 3:
				{
				setState(59);
				shape_assignment_statement();
				}
				break;
			case 4:
				{
				setState(60);
				define_statement();
				}
				break;
			case 5:
				{
				setState(61);
				call_statement();
				}
				break;
			case 6:
				{
				setState(62);
				block_statement();
				}
				break;
			case 7:
				{
				setState(63);
				loop_statement();
				}
				break;
			case 8:
				{
				setState(64);
				if_statement();
				}
				break;
			}
			setState(73);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NEWLINE:
				{
				setState(68); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(67);
					match(NEWLINE);
					}
					}
					setState(70); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				break;
			case EOF:
			case CANVAS:
			case BLOCK:
			case FOR:
			case IF:
			case DEFINE:
			case CALL:
			case TEXT:
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Canvas_statementContext extends ParserRuleContext {
		public TerminalNode CANVAS() { return getToken(bloqParser.CANVAS, 0); }
		public TerminalNode COLON() { return getToken(bloqParser.COLON, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(bloqParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(bloqParser.NUMBER, i);
		}
		public TerminalNode COMMA() { return getToken(bloqParser.COMMA, 0); }
		public Canvas_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_canvas_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).enterCanvas_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).exitCanvas_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bloqParserVisitor ) return ((bloqParserVisitor<? extends T>)visitor).visitCanvas_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Canvas_statementContext canvas_statement() throws RecognitionException {
		Canvas_statementContext _localctx = new Canvas_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_canvas_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(CANVAS);
			setState(76);
			match(COLON);
			setState(77);
			match(NUMBER);
			setState(78);
			match(COMMA);
			setState(79);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Simple_assignment_statementContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode COLON() { return getToken(bloqParser.COLON, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Simple_assignment_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_assignment_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).enterSimple_assignment_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).exitSimple_assignment_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bloqParserVisitor ) return ((bloqParserVisitor<? extends T>)visitor).visitSimple_assignment_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_assignment_statementContext simple_assignment_statement() throws RecognitionException {
		Simple_assignment_statementContext _localctx = new Simple_assignment_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simple_assignment_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			variable();
			setState(82);
			match(COLON);
			setState(83);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Shape_assignment_statementContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode COLON() { return getToken(bloqParser.COLON, 0); }
		public TerminalNode NEWLINE() { return getToken(bloqParser.NEWLINE, 0); }
		public List<Shape_rowContext> shape_row() {
			return getRuleContexts(Shape_rowContext.class);
		}
		public Shape_rowContext shape_row(int i) {
			return getRuleContext(Shape_rowContext.class,i);
		}
		public Shape_assignment_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shape_assignment_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).enterShape_assignment_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).exitShape_assignment_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bloqParserVisitor ) return ((bloqParserVisitor<? extends T>)visitor).visitShape_assignment_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Shape_assignment_statementContext shape_assignment_statement() throws RecognitionException {
		Shape_assignment_statementContext _localctx = new Shape_assignment_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_shape_assignment_statement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			variable();
			setState(86);
			match(COLON);
			setState(87);
			match(NEWLINE);
			setState(89); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(88);
					shape_row();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(91); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Call_statementContext extends ParserRuleContext {
		public TerminalNode CALL() { return getToken(bloqParser.CALL, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode OPENBRACKET() { return getToken(bloqParser.OPENBRACKET, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(bloqParser.CLOSEBRACKET, 0); }
		public Call_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_call_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).enterCall_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).exitCall_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bloqParserVisitor ) return ((bloqParserVisitor<? extends T>)visitor).visitCall_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Call_statementContext call_statement() throws RecognitionException {
		Call_statementContext _localctx = new Call_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_call_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(CALL);
			setState(94);
			variable();
			setState(95);
			match(OPENBRACKET);
			setState(96);
			args();
			setState(97);
			match(CLOSEBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Define_statementContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(bloqParser.DEFINE, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode OPENBRACKET() { return getToken(bloqParser.OPENBRACKET, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public TerminalNode CLOSEBRACKET() { return getToken(bloqParser.CLOSEBRACKET, 0); }
		public TerminalNode OPENCURLY() { return getToken(bloqParser.OPENCURLY, 0); }
		public TerminalNode CLOSECURLY() { return getToken(bloqParser.CLOSECURLY, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(bloqParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(bloqParser.NEWLINE, i);
		}
		public List<In_function_statementContext> in_function_statement() {
			return getRuleContexts(In_function_statementContext.class);
		}
		public In_function_statementContext in_function_statement(int i) {
			return getRuleContext(In_function_statementContext.class,i);
		}
		public Define_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).enterDefine_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).exitDefine_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bloqParserVisitor ) return ((bloqParserVisitor<? extends T>)visitor).visitDefine_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Define_statementContext define_statement() throws RecognitionException {
		Define_statementContext _localctx = new Define_statementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_define_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(DEFINE);
			setState(100);
			variable();
			setState(101);
			match(OPENBRACKET);
			setState(102);
			args();
			setState(103);
			match(CLOSEBRACKET);
			setState(104);
			match(OPENCURLY);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(105);
				match(NEWLINE);
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(111);
				in_function_statement();
				setState(113); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(112);
					match(NEWLINE);
					}
					}
					setState(115); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				}
				setState(119); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BLOCK) | (1L << FOR) | (1L << IF) | (1L << CALL) | (1L << TEXT))) != 0) );
			setState(121);
			match(CLOSECURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class In_function_statementContext extends ParserRuleContext {
		public Simple_assignment_statementContext simple_assignment_statement() {
			return getRuleContext(Simple_assignment_statementContext.class,0);
		}
		public Shape_assignment_statementContext shape_assignment_statement() {
			return getRuleContext(Shape_assignment_statementContext.class,0);
		}
		public Block_statementContext block_statement() {
			return getRuleContext(Block_statementContext.class,0);
		}
		public Call_statementContext call_statement() {
			return getRuleContext(Call_statementContext.class,0);
		}
		public Loop_statementContext loop_statement() {
			return getRuleContext(Loop_statementContext.class,0);
		}
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public In_function_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_in_function_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).enterIn_function_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).exitIn_function_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bloqParserVisitor ) return ((bloqParserVisitor<? extends T>)visitor).visitIn_function_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final In_function_statementContext in_function_statement() throws RecognitionException {
		In_function_statementContext _localctx = new In_function_statementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_in_function_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(123);
				simple_assignment_statement();
				}
				break;
			case 2:
				{
				setState(124);
				shape_assignment_statement();
				}
				break;
			case 3:
				{
				setState(125);
				block_statement();
				}
				break;
			case 4:
				{
				setState(126);
				call_statement();
				}
				break;
			case 5:
				{
				setState(127);
				loop_statement();
				}
				break;
			case 6:
				{
				setState(128);
				if_statement();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Block_statementContext extends ParserRuleContext {
		public TerminalNode BLOCK() { return getToken(bloqParser.BLOCK, 0); }
		public TerminalNode COLON() { return getToken(bloqParser.COLON, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(bloqParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(bloqParser.NEWLINE, i);
		}
		public List<Block_start_statementContext> block_start_statement() {
			return getRuleContexts(Block_start_statementContext.class);
		}
		public Block_start_statementContext block_start_statement(int i) {
			return getRuleContext(Block_start_statementContext.class,i);
		}
		public List<Block_shape_statementContext> block_shape_statement() {
			return getRuleContexts(Block_shape_statementContext.class);
		}
		public Block_shape_statementContext block_shape_statement(int i) {
			return getRuleContext(Block_shape_statementContext.class,i);
		}
		public Block_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).enterBlock_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).exitBlock_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bloqParserVisitor ) return ((bloqParserVisitor<? extends T>)visitor).visitBlock_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Block_statementContext block_statement() throws RecognitionException {
		Block_statementContext _localctx = new Block_statementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_block_statement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(BLOCK);
			setState(132);
			match(COLON);
			setState(133);
			args();
			setState(141);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(134);
					match(NEWLINE);
					setState(137);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case START:
						{
						setState(135);
						block_start_statement();
						}
						break;
					case SHAPE:
						{
						setState(136);
						block_shape_statement();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					} 
				}
				setState(143);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Block_start_statementContext extends ParserRuleContext {
		public TerminalNode START() { return getToken(bloqParser.START, 0); }
		public TerminalNode COLON() { return getToken(bloqParser.COLON, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode COMMA() { return getToken(bloqParser.COMMA, 0); }
		public Block_start_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block_start_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).enterBlock_start_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof bloqParserListener ) ((bloqParserListener)listener).exitBlock_start_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof bloqParserVisitor ) return ((bloqParserVisitor<? extends T>)visitor).visitBlock_start_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Block_start_statementContext block_start_statement() throws RecognitionException {
		Block_start_statementContext _localctx = new Block_start_statementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_block_start_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(START);
			setState(145);
			match(COLON);
			setState(146);
			expression();
			setState(147);
			match(COMMA);
			setState(148);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
